--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "moment-timezone": "^0.5.43",
     "winston": "^3.11.0",
     "xlsx": "^0.18.5",
     "exceljs": "^4.4.0"
